--- a/05/05_1.css
+++ b/05/05_1.css
@@ -14,6 +14,13 @@
   background-color: rgb(45, 101, 255);
   border : none;
 }
+.tt{
+  border-color: rgb(255, 255, 255);
+  background-color:  rgb(255, 255, 255);
+}
+input::placeholder{
+  color : red;
+}
 /* :root {
     --primary: #8e24aa;
   }
