--- a/05/05_2.css
+++ b/05/05_2.css
@@ -11,3 +11,8 @@
     justify-content: center;
     align-items: center;
 }
+h2 {
+    color: red;
+    font-weight: bold;
+    font-size: large;
+}
